gccida/c3/find_base_term
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1705:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1705:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1744:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = (  struct rtx_def *)base_term[1]; 
                         ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1750:11: error: expected ';' after expression
x = ( rtx)base_term[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1755:11: error: expected ';' after expression
x = ( rtx)base_term[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1758:11: error: expected ';' after expression
x = ( rtx)base_term[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1765:11: error: expected ';' after expression
x = ( rtx)base_term[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1769:1: error: use of undeclared identifier 'v10'
v10 = find_base_term( v5); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1776:7: error: use of undeclared identifier 'v10'
if ( !v10 ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1778:19: error: use of undeclared identifier 'v10'
v12 = *( _DWORD *)v10; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1779:39: error: use of undeclared identifier 'v10'
if ( ( unsigned __int16)( *( _DWORD *)v10 - 67) < 2u ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1780:8: error: use of undeclared identifier 'v10'
return v10; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1783:13: error: use of undeclared identifier 'v10'
base_term = v10; 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1788:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)base_term[1]; 
               ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1817:29: error: expected ')'
v10 = find_base_term( ( rtx)v8[1]); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1817:21: note: to match this '('
v10 = find_base_term( ( rtx)v8[1]); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1817:1: error: use of undeclared identifier 'v10'
v10 = find_base_term( ( rtx)v8[1]); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1818:6: error: use of undeclared identifier 'v10'
if ( v10 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/alias.c:1824:8: error: use of undeclared identifier 'v10'
return v10; 
       ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_base_term/src/obj/alias.o] Error 1
